# Test01

./: CMakeLists.txt  main.cpp  resources.qrc
backend/: SerialManager.cpp  SerialManager.h  TelemetryParser.cpp  TelemetryParser.h  TelemetrySimulator.cpp  TelemetrySimulator.h  VehicleData.cpp  VehicleData.h  WarningManager.cpp  WarningManager.h
docs/: architecture.md  uart_protocol.md
qml/: main.qml
qml/components/: BatteryBar.qml  BottomTelemetryRail.qml  ChevronTunnel.qml  GearSelector.qml  ModeCurve.qml  SettingPill.qml  SettingSlider.qml  Speedometer.qml  TelemetryCard.qml  TelemetryGraph.qml  TopStatusBar.qml  WarningPopup.qml
qml/screens/: DebugScreen.qml  DrivingScreen.qml  SettingsScreen.qml
qml/theme/: Colors.qml  Fonts.qml
